# mdbook-mermaid-mmdr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml
doc/: book.toml
doc/src/: SUMMARY.md  configuration.md  diagram_types.md  error_handling.md  getting_started.md  introduction.md  theme_customization.md
examples/comprehensive/: book.toml
examples/comprehensive/src/: README.md  SUMMARY.md  customization.md  diagram_types.md  introduction.md
examples/simple/: book.toml
examples/simple/src/: SUMMARY.md  flowchart.md
examples/themed/: book.toml
examples/themed/src/: SUMMARY.md  custom_theme.md
src/: config.rs  error.rs  lib.rs  main.rs  renderer.rs
tests/: common.rs
tests/fixtures/: book_config.json  chapter_content.json  full_input.json
