[package]
name = "mdbook-mermaid-mmdr"
version = "0.1.1"
edition = "2021"
description = "A mdbook preprocessor that renders mermaid diagrams using mermaid-rs-renderer"
authors = ["Adam Cavendish <GetbetterABC@yeah.net>"]
repository = "https://github.com/adamcavendish/mdbook-mermaid-mmdr"
license = "MIT OR Apache-2.0"
keywords = ["mdbook", "mermaid", "preprocessor"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
mdbook-preprocessor = "0.5"
mermaid-rs-renderer = "0.2"
pulldown-cmark = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.9"

[dev-dependencies]
mdbook-core = "0.5"
